<resources>
    <string name="app_name">Dudes In A Dungeon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="homepageTitle">Dudes In A Dungeon\nCompanion App</string>
    <string name="introductionTextView">Greetings, Adventurer!\n\nWelcome to the world of Dudes In A Dungeon: a tabletop RPG where you and your fellow dudes will set out on an adventure for epic loot. Dudes In A Dungeon is an RPG created by Warlocks By the Sea: an amazing company responsible for making some of the greatest card and board games.\n\nWe\'ve been given the pleasure of creating this companion application to help players keep track of their characters, items, and spells.\n\nFeel free to make some characters, get some items, learn some spells, and get in that dungeon.\n\nHappy looting!</string>
    <string name="createCharacterButtonText">New Character</string>
    <string name="viewCharactersButtonText">View Characters</string>
    <string name="viewItemsButtonText">Items</string>
    <string name="viewSpellsButtonText">Spells</string>
    <string name="nav_about_text">About</string>
    <string name="nav_create_char">Create Character</string>
    <string name="nav_view_char">Characters</string>
    <string name="nav_items">Items</string>
    <string name="nav_spells">Spells</string>
    <string name="nav_email">Email Developers</string>
    <string name="nav_share_sms">Share via SMS</string>
    <string name="nav_website">Visit Website</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="snackbar_no_software">No installed software to complete the task. Sorry!</string>
    <string name="email_subject">Question regarding Dudes In A Dungeon App</string>
    <string name="email_body">Hello, I have a question about...</string>
    <string name="sms_message">Get some dudes and get in a dungeon! Check out this amazing app that helps me keep track of my characters, items, and spells:</string>
    <string name="nav_header_appname">Dudes In A Dunegeon Application</string>
    <string name="human">Human</string>
    <string name="dwarf">Dwarf</string>
    <string name="elf">Elf</string>
    <string name="warrior">Warrior</string>
    <string name="wizard">Wizard</string>
    <string name="rogue">Rogue</string>
    <string name="priest">Priest</string>
    <string name="offensive">Offensive</string>
    <string name="debuff">Debuff</string>
    <string name="support">Support</string>
    <string name="healing">Healing</string>
    <string name="buff">Buff</string>
    <string name="charcacter_creator">Character Creator</string>
    <string name="race">Race</string>
    <string name="character_class">Class</string>
    <string name="random_atts">Randomize\nAttributes</string>
    <string name="character_name">Character Name</string>
    <string name="skill">Skills</string>
    <string name="remaining_att">Attribute Points Remaining:</string>
    <string name="remaing_skill">Skill Points\nRemaining:</string>
    <string name="reset_skills">Reset\nSkills</string>
    <string name="confirm">Confirm</string>
    <string name="reset_character">Reset Character</string>
    <string name="strength">Strength</string>
    <string name="agility">Agility</string>
    <string name="resilience">Resilience</string>
    <string name="luck">Luck</string>
    <string name="intelligence">Intelligence</string>
    <string name="attributes">Attributes</string>
    <string name="fighting">Fighting</string>
    <string name="shooting">Shooting</string>
    <string name="acrobatics">Acrobatics</string>
    <string name="casting">Casting</string>
    <string name="crafting">Crafting</string>
    <string name="gambling">Gambling</string>
    <string name="lying">Lying</string>
    <string name="persuasion">Persuasion</string>
    <string name="sneaking">Sneaking</string>
    <string name="survival">Survival</string>
    <string name="all_items">View\nAll Items</string>
    <string name="weapons">View\nWeapons</string>
    <string name="armor">View\nArmor</string>
    <string name="other_items">View\nEquipment</string>
    <string name="sword">Sword</string>
    <string name="axe">Axe</string>
    <string name="spear">Spear</string>
    <string name="dagger">Dagger</string>
    <string name="bow">Bow</string>
    <string name="crossbow">Crossbow</string>
    <string name="leather_armor">Leather Armor</string>
    <string name="chain_mail">Chain Mail</string>
    <string name="plate_mail">Plate Mail</string>
    <string name="shield">Shield</string>
    <string name="backpack">Backpack</string>
    <string name="canteen">Canteen</string>
    <string name="tinder_box">Tinder Box</string>
    <string name="tent">Tent</string>
    <string name="sleeping_bag">Sleeping Bag</string>
    <string name="rations">Rations</string>
    <string name="sword_description">Basic sword, most warriors learn the basics using one of these</string>
    <string name="axe_description">Very basic weapon, easy to use, though somewhat unwieldy</string>
    <string name="spear_description">Oldest weapon, and easiest to wield, though still effective</string>
    <string name="dagger_description">Very small, easy to conceal, best used in pairs</string>
    <string name="bow_description">Quick to make, though difficult to learn, very widespread ranged weapon</string>
    <string name="crossbow_description">More widespread and easier to use than a bow, still very effective</string>
    <string name="leather_armor_description">Easily manufactured armor, provides only basic defense, better than nothing</string>
    <string name="chain_mail_description">Provides a good amount of protection, while still allowing the wearer a range of mobility</string>
    <string name="plate_mail_description">Very heavy armor, provides a lot of protection, but limits mobility</string>
    <string name="shield_description">Easy to carry in one hand, provides that little bit extra every adventurer needs</string>
    <string name="backpack_description">Easy way to carry around your items</string>
    <string name="canteen_description">Small container to carry and keep your water clean</string>
    <string name="tinder_box_description">A box that contains all tools needed to start a fire</string>
    <string name="tent_description">A necessity for those who travel in the wilderness</string>
    <string name="sleeping_bag_description">Person sized bag to sleep in.  Keeps the bugs out</string>
    <string name="rations_description">Dried foods easy to preserve</string>
    <string name="sword_image" translatable="false">https://pixabay.com/en/sword-isolated-weapon-steel-blade-309580/</string>
    <string name="axe_image" translatable="false">https://pixabay.com/en/axe-tool-sharp-implement-chopping-47042/</string>
    <string name="spear_image" translatable="false">https://pixabay.com/en/spear-lance-weapons-medieval-296530/</string>
    <string name="dagger_image" translatable="false">https://pixabay.com/p-34231/?no_redirect</string>
    <string name="bow_image" translatable="false">https://pixabay.com/en/arrow-bow-weapon-medieval-weapon-161517/</string>
    <string name="crossbow_image" translatable="false">https://www.goodfreephotos.com/vector-images/crossbow-vector-clipart.png.php</string>
    <string name="plate_mail_image" translatable="false">https://pixabay.com/en/armor-battle-knight-1297111/</string>
    <string name="backpack_image" translatable="false">https://pixabay.com/en/backpack-hiking-bag-travel-24493/</string>
    <string name="canteen_image" translatable="false">https://pixabay.com/en/container-jar-jug-pot-pottery-2028475/</string>
    <string name="tinder_box_image" translatable="false">https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Camp_Log_Cabin_Fire.svg/1121px-Camp_Log_Cabin_Fire.svg.png</string>
    <string name="tent_image" translatable="false">https://pixabay.com/en/camping-camp-tent-mountains-field-2169976/</string>
    <string name="sleeping_bag_image" translatable="false">https://pixabay.com/p-1294371/?no_redirect</string>
    <string name="rations_image" translatable="false">https://pixabay.com/en/food-junk-food-pack-package-2029493/</string>
    <string name="shield_image" translatable="false">https://pixabay.com/en/shield-escutcheon-heater-shield-31869/</string>
    <string name="all_other_images">All other images taken from Pixabay\nCC0 Public Domain\nFree for commercial use\nNo attribution required</string>
    <string name="fireball">Fireball</string>
    <string name="ice_blast">Ice Blast</string>
    <string name="chain_lightning">Chain Lightning</string>
    <string name="magic_missile">Magic Missile</string>
    <string name="chilling_wind">Chilling Wind</string>
    <string name="move_earth">Move Earth</string>
    <string name="teleport">Teleport</string>
    <string name="make_fog">Make Fog</string>
    <string name="raise_dead">Raise Dead</string>
    <string name="inflict_curse">Inflict Curse</string>
    <string name="control_plants">Control Plants</string>
    <string name="drain_life">Drain Life</string>
    <string name="magic_armor">Magic Armor</string>
    <string name="heal">Heal</string>
    <string name="convert">Convert</string>
    <string name="confuse">Confuse</string>
    <string name="inflict_pain">Inflict Pain</string>
    <string name="resurrect">Resurrect</string>
    <string name="call_miracle">Call Miracle</string>
    <string name="remove_curse">Remove Curse</string>
    <string name="bless">Bless</string>
    <string name="battle_cry">Battle Cry</string>
    <string name="brutal_swing">Brutal Swing</string>
    <string name="cleave">Cleave</string>
    <string name="cover_ally">Cover Ally</string>
    <string name="taunt">Taunt</string>
    <string name="smite">Smite</string>
    <string name="frenzied_charge">Frenzied Charge</string>
    <string name="turn_invisible">Turn Invisible</string>
    <string name="back_stab">Back Stab</string>
    <string name="steal">Steal</string>
    <string name="shadow_step">Shadow Step</string>
    <string name="imbue_poison">Imbue Poison</string>
    <string name="blade_flurry">Blade Flurry</string>
    <string name="feign_death">Feign Death</string>
    <string name="fireball_description">Simple, but effective, there\'s no better feeling the frying the monsters with this spell</string>
    <string name="ice_blast_description">Throw a bolt of ice at the enemy, quite good at slowing them down before they can reach you</string>
    <string name="chain_lightning_description">One of the most complex spells, but at the same time, one of the strongest</string>
    <string name="language_preference_summary">Change the language of the application.\nApplication will restart.</string>
    <string name="colour_theme_preference_title">Colour Theme</string>
    <string name="default_language_preference" translatable="false">en</string>
    <string name="delete_character">Delete\nCharacter</string>
    <string name="colour_preference_purple">Purple</string>
    <string name="colour_preference_green">Green</string>
    <string name="colour_preference_offDesc">Change the application to the Green theme\nApplication will restart.</string>
    <string name="colour_preference_onDesc">Change the application to the Purple theme\nApplication will restart.</string>
    <string name="credits_title">Credits</string>
    <string name="appLogo_createdBy">Application logo created bv\nNicholas Allaire</string>
    <string name="armourCreatedBy">Chainmail and Leather Armour images created by\nNicholas Allaire</string>
    <string name="originalLogoCredits">Original Griffin from Wikipedia Commons:\nhttps://commons.wikimedia.org/wiki/File:Sk%%C3%A5ne_l%%C3%%A4nsvapen_-_Riksarkivet_Sverige.png</string>
    <string name="language_preference_title">Language</string>
</resources>