<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/nav_about_text" />
        <item
            android:id="@+id/nav_create_char"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/nav_create_char" />
        <item
            android:id="@+id/nav_view_char"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/nav_view_char" />
        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_colorize_black_24dp"
            android:title="@string/nav_items" />
        <item
            android:id="@+id/nav_spells"
            android:icon="@drawable/ic_flare_black_24dp"
            android:title="@string/nav_spells" />
    </group>

    <item android:title="Communication">
        <menu>
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_mail_black_24dp"
                android:title="@string/nav_email" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_message_black_24dp"
                android:title="@string/nav_share_sms" />
            <item
                android:id="@+id/nav_website"
                android:icon="@drawable/ic_public_black_24dp"
                android:title="@string/nav_website" />
        </menu>
    </item>

</menu>
