<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="confusedgriffinproductions.dudesinadungeon.MainFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/titleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:elevation="1dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="220dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="false"
                    app:srcCompat="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/homeTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/homepageTitle"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/introductionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/introductionTextView"
                android:textAlignment="textStart"
                android:textSize="20sp"
                tools:text="@string/introductionTextView" />

            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="0"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/viewItemsButton"
                        style="@style/Base.Widget.AppCompat.Button"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:text="@string/viewItemsButtonText"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/viewSpellsButton"
                        style="@style/Base.Widget.AppCompat.Button"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:text="@string/viewSpellsButtonText"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/createCharacterButton"
                        style="@style/Base.Widget.AppCompat.Button"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:text="@string/createCharacterButtonText"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/viewCharactersButton"
                        style="@style/Base.Widget.AppCompat.Button"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:text="@string/viewCharactersButtonText"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
