<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="confusedgriffinproductions.dudesinadungeon.ItemListFragment">


    <TabHost
        android:id="@+id/items_tab_host"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/all_items_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:tag="0"
                    android:text="@string/all_items"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/weapons_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:tag="1"
                    android:text="@string/weapons"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/armor_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:tag="2"
                    android:text="@string/armor"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/other_items_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:tag="3"
                    android:text="@string/other_items"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="hello 1" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="hello 2" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="hello 3" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="hello 4" />
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</FrameLayout>
